crates/credential/tests/probes/scheme_guard_retention.stderr
error: lifetime may not live long enough
  --> tests/probes/scheme_guard_retention.rs:35:9
   |
25 |     fn try_retain<'a>(
   |                   -- lifetime `'a` defined here
...
35 |         self.stored = Some(new_scheme);
   |         ^^^^^^^^^^^ assignment requires that `'a` must outlive `'static`
